// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Email Builder > HTML template snapshots > matches snapshot for empty briefs 1`] = `"<p>No startup ideas found today. Check back tomorrow!</p>"`;

exports[`Email Builder > HTML template snapshots > matches snapshot for multiple briefs (free tier) 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="UTF-8">
<meta name="viewport" content="width=device-width, initial-scale=1.0">
<title>Today&#39;s Top Startup Idea: Idea 1</title>
<style>

body {
font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
line-height: 1.6;
color: #1a1a1a;
background-color: #f5f5f5;
margin: 0;
padding: 0;
}
.container {
max-width: 600px;
margin: 0 auto;
background-color: #ffffff;
}
.header {
background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
color: white;
padding: 32px 24px;
text-align: center;
}
.header h1 {
margin: 0;
font-size: 24px;
font-weight: 600;
}
.header .date {
margin-top: 8px;
opacity: 0.9;
font-size: 14px;
}
.hero {
padding: 32px 24px;
background-color: #fafafa;
border-bottom: 1px solid #eee;
}
.hero-badge {
display: inline-block;
background: linear-gradient(135deg, #ff6b6b 0%, #ee5a5a 100%);
color: white;
padding: 4px 12px;
border-radius: 16px;
font-size: 12px;
font-weight: 600;
margin-bottom: 16px;
}
.hero h2 {
margin: 0 0 8px 0;
font-size: 28px;
color: #1a1a1a;
}
.hero .tagline {
color: #666;
font-size: 16px;
margin-bottom: 16px;
}
.score-bar {
display: flex;
gap: 16px;
margin: 16px 0;
}
.score-item {
background: #fff;
padding: 12px 16px;
border-radius: 8px;
border: 1px solid #e0e0e0;
}
.score-label {
font-size: 11px;
color: #888;
text-transform: uppercase;
letter-spacing: 0.5px;
}
.score-value {
font-size: 20px;
font-weight: 700;
color: #667eea;
}
.brief-section {
padding: 24px;
border-bottom: 1px solid #eee;
}
.brief-section h3 {
margin: 0 0 12px 0;
font-size: 14px;
color: #888;
text-transform: uppercase;
letter-spacing: 0.5px;
}
.brief-section p {
margin: 0;
color: #333;
}
.features-list {
list-style: none;
padding: 0;
margin: 0;
}
.features-list li {
padding: 8px 0;
padding-left: 24px;
position: relative;
}
.features-list li:before {
content: '\\2713';
position: absolute;
left: 0;
color: #22c55e;
font-weight: bold;
}
.other-ideas {
padding: 24px;
}
.other-ideas h3 {
margin: 0 0 16px 0;
font-size: 18px;
}
.idea-row {
display: flex;
align-items: center;
padding: 16px;
background: #fafafa;
border-radius: 8px;
margin-bottom: 12px;
}
.idea-rank {
width: 32px;
height: 32px;
background: #667eea;
color: white;
border-radius: 50%;
display: flex;
align-items: center;
justify-content: center;
font-weight: 600;
margin-right: 16px;
flex-shrink: 0;
}
.idea-content {
flex: 1;
}
.idea-name {
font-weight: 600;
color: #1a1a1a;
margin-bottom: 4px;
}
.idea-tagline {
font-size: 14px;
color: #666;
}
.idea-score {
font-weight: 600;
color: #667eea;
font-size: 18px;
}
.locked-idea {
opacity: 0.5;
filter: blur(2px);
}
.cta-section {
padding: 32px 24px;
text-align: center;
background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
}
.cta-section h3 {
color: white;
margin: 0 0 8px 0;
font-size: 20px;
}
.cta-section p {
color: rgba(255,255,255,0.9);
margin: 0 0 16px 0;
}
.cta-button {
display: inline-block;
background: white;
color: #667eea;
padding: 14px 32px;
border-radius: 8px;
text-decoration: none;
font-weight: 600;
font-size: 16px;
}
.footer {
padding: 24px;
text-align: center;
background: #1a1a1a;
color: #888;
font-size: 12px;
}
.footer a {
color: #888;
text-decoration: underline;
}

</style>
</head>
<body>
<div class="container">
<div class="header">
<h1>ZeroToShip</h1>
<p class="date">DATE_PLACEHOLDER</p>
</div>


<div class="hero">
<span class="hero-badge">#1 TODAY'S TOP IDEA</span>
<h2>Idea 1</h2>
<p class="tagline">Tagline for idea 1</p>

<table width="100%" cellpadding="0" cellspacing="0" style="margin: 16px 0;">
<tr>
<td width="33%" style="background: #fff; padding: 12px 16px; border-radius: 8px; border: 1px solid #e0e0e0; text-align: center;">
<div style="font-size: 11px; color: #888; text-transform: uppercase; letter-spacing: 0.5px;">Priority</div>
<div style="font-size: 20px; font-weight: 700; color: #667eea;">10.0</div>
</td>
<td width="4%"></td>
<td width="33%" style="background: #fff; padding: 12px 16px; border-radius: 8px; border: 1px solid #e0e0e0; text-align: center;">
<div style="font-size: 11px; color: #888; text-transform: uppercase; letter-spacing: 0.5px;">Effort</div>
<div style="font-size: 20px; font-weight: 700; color: #667eea;">weekend</div>
</td>
<td width="4%"></td>
<td width="33%" style="background: #fff; padding: 12px 16px; border-radius: 8px; border: 1px solid #e0e0e0; text-align: center;">
<div style="font-size: 11px; color: #888; text-transform: uppercase; letter-spacing: 0.5px;">Revenue</div>
<div style="font-size: 14px; font-weight: 700; color: #667eea;">$10K MRR</div>
</td>
</tr>
</table>
</div>

<div class="brief-section">
<h3>The Problem</h3>
<p>Users struggle with testing email systems</p>
</div>

<div class="brief-section">
<h3>Target Audience</h3>
<p>Developers building email features</p>
</div>

<div class="brief-section">
<h3>Proposed Solution</h3>
<p>Automated email testing framework</p>
</div>

<div class="brief-section">
<h3>Key Features</h3>
<ul class="features-list">
<li>Feature 1</li>
<li>Feature 2</li>
<li>Feature 3</li>
<li>Feature 4</li>
</ul>
</div>

<div class="brief-section">
<h3>Go-to-Market</h3>
<p><strong>Strategy:</strong> Launch on Product Hunt</p>
<p><strong>First Customers:</strong> Indie hackers and startups</p>
</div>


<div class="other-ideas">
<h3>More Ideas Today</h3>

<div class="idea-row " style="position: relative;">

<div class="idea-rank">2</div>
<div class="idea-content">
<div class="idea-name">Idea 2</div>
<div class="idea-tagline">Tagline for idea 2</div>
</div>
<div class="idea-score">9.5</div>
</div>


<div class="idea-row " style="position: relative;">

<div class="idea-rank">3</div>
<div class="idea-content">
<div class="idea-name">Idea 3</div>
<div class="idea-tagline">Tagline for idea 3</div>
</div>
<div class="idea-score">9.0</div>
</div>


<div class="idea-row locked-idea" style="position: relative;">
<div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; display: flex; align-items: center; justify-content: center; background: rgba(255,255,255,0.8);"><span style="font-size: 20px;">&#128274;</span></div>
<div class="idea-rank">4</div>
<div class="idea-content">
<div class="idea-name">Idea 4</div>
<div class="idea-tagline">Tagline for idea 4</div>
</div>
<div class="idea-score">8.5</div>
</div>


<div class="idea-row locked-idea" style="position: relative;">
<div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; display: flex; align-items: center; justify-content: center; background: rgba(255,255,255,0.8);"><span style="font-size: 20px;">&#128274;</span></div>
<div class="idea-rank">5</div>
<div class="idea-content">
<div class="idea-name">Idea 5</div>
<div class="idea-tagline">Tagline for idea 5</div>
</div>
<div class="idea-score">8.0</div>
</div>


<p style="text-align: center; color: #888; margin-top: 16px;">
2 more ideas available with Pro
</p>

</div>


<div class="cta-section">
<h3>Every Brief. Every Day.</h3>
<p>You're seeing 1 featured brief per email. Pro members get the full brief for every idea, plus archive access and search.</p>
<a href="https://test.zerotoship.dev/upgrade" class="cta-button">Upgrade to Pro</a>
</div>


<div class="footer">
<p>You're receiving this because you subscribed to ZeroToShip daily briefs.</p>
<p>
<a href="https://test.zerotoship.dev/unsub">Unsubscribe</a> |
<a href="https://test.zerotoship.dev">View in browser</a>
</p>
<p>&copy; YEAR ZeroToShip. All rights reserved.</p>
</div>

</div>
</body>
</html>"
`;

exports[`Email Builder > HTML template snapshots > matches snapshot for multiple briefs (pro tier) 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="UTF-8">
<meta name="viewport" content="width=device-width, initial-scale=1.0">
<title>Today&#39;s Top Startup Idea: Idea 1</title>
<style>

body {
font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
line-height: 1.6;
color: #1a1a1a;
background-color: #f5f5f5;
margin: 0;
padding: 0;
}
.container {
max-width: 600px;
margin: 0 auto;
background-color: #ffffff;
}
.header {
background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
color: white;
padding: 32px 24px;
text-align: center;
}
.header h1 {
margin: 0;
font-size: 24px;
font-weight: 600;
}
.header .date {
margin-top: 8px;
opacity: 0.9;
font-size: 14px;
}
.hero {
padding: 32px 24px;
background-color: #fafafa;
border-bottom: 1px solid #eee;
}
.hero-badge {
display: inline-block;
background: linear-gradient(135deg, #ff6b6b 0%, #ee5a5a 100%);
color: white;
padding: 4px 12px;
border-radius: 16px;
font-size: 12px;
font-weight: 600;
margin-bottom: 16px;
}
.hero h2 {
margin: 0 0 8px 0;
font-size: 28px;
color: #1a1a1a;
}
.hero .tagline {
color: #666;
font-size: 16px;
margin-bottom: 16px;
}
.score-bar {
display: flex;
gap: 16px;
margin: 16px 0;
}
.score-item {
background: #fff;
padding: 12px 16px;
border-radius: 8px;
border: 1px solid #e0e0e0;
}
.score-label {
font-size: 11px;
color: #888;
text-transform: uppercase;
letter-spacing: 0.5px;
}
.score-value {
font-size: 20px;
font-weight: 700;
color: #667eea;
}
.brief-section {
padding: 24px;
border-bottom: 1px solid #eee;
}
.brief-section h3 {
margin: 0 0 12px 0;
font-size: 14px;
color: #888;
text-transform: uppercase;
letter-spacing: 0.5px;
}
.brief-section p {
margin: 0;
color: #333;
}
.features-list {
list-style: none;
padding: 0;
margin: 0;
}
.features-list li {
padding: 8px 0;
padding-left: 24px;
position: relative;
}
.features-list li:before {
content: '\\2713';
position: absolute;
left: 0;
color: #22c55e;
font-weight: bold;
}
.other-ideas {
padding: 24px;
}
.other-ideas h3 {
margin: 0 0 16px 0;
font-size: 18px;
}
.idea-row {
display: flex;
align-items: center;
padding: 16px;
background: #fafafa;
border-radius: 8px;
margin-bottom: 12px;
}
.idea-rank {
width: 32px;
height: 32px;
background: #667eea;
color: white;
border-radius: 50%;
display: flex;
align-items: center;
justify-content: center;
font-weight: 600;
margin-right: 16px;
flex-shrink: 0;
}
.idea-content {
flex: 1;
}
.idea-name {
font-weight: 600;
color: #1a1a1a;
margin-bottom: 4px;
}
.idea-tagline {
font-size: 14px;
color: #666;
}
.idea-score {
font-weight: 600;
color: #667eea;
font-size: 18px;
}
.locked-idea {
opacity: 0.5;
filter: blur(2px);
}
.cta-section {
padding: 32px 24px;
text-align: center;
background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
}
.cta-section h3 {
color: white;
margin: 0 0 8px 0;
font-size: 20px;
}
.cta-section p {
color: rgba(255,255,255,0.9);
margin: 0 0 16px 0;
}
.cta-button {
display: inline-block;
background: white;
color: #667eea;
padding: 14px 32px;
border-radius: 8px;
text-decoration: none;
font-weight: 600;
font-size: 16px;
}
.footer {
padding: 24px;
text-align: center;
background: #1a1a1a;
color: #888;
font-size: 12px;
}
.footer a {
color: #888;
text-decoration: underline;
}

</style>
</head>
<body>
<div class="container">
<div class="header">
<h1>ZeroToShip</h1>
<p class="date">DATE_PLACEHOLDER</p>
</div>


<div class="hero">
<span class="hero-badge">#1 TODAY'S TOP IDEA</span>
<h2>Idea 1</h2>
<p class="tagline">Tagline for idea 1</p>

<table width="100%" cellpadding="0" cellspacing="0" style="margin: 16px 0;">
<tr>
<td width="33%" style="background: #fff; padding: 12px 16px; border-radius: 8px; border: 1px solid #e0e0e0; text-align: center;">
<div style="font-size: 11px; color: #888; text-transform: uppercase; letter-spacing: 0.5px;">Priority</div>
<div style="font-size: 20px; font-weight: 700; color: #667eea;">10.0</div>
</td>
<td width="4%"></td>
<td width="33%" style="background: #fff; padding: 12px 16px; border-radius: 8px; border: 1px solid #e0e0e0; text-align: center;">
<div style="font-size: 11px; color: #888; text-transform: uppercase; letter-spacing: 0.5px;">Effort</div>
<div style="font-size: 20px; font-weight: 700; color: #667eea;">weekend</div>
</td>
<td width="4%"></td>
<td width="33%" style="background: #fff; padding: 12px 16px; border-radius: 8px; border: 1px solid #e0e0e0; text-align: center;">
<div style="font-size: 11px; color: #888; text-transform: uppercase; letter-spacing: 0.5px;">Revenue</div>
<div style="font-size: 14px; font-weight: 700; color: #667eea;">$10K MRR</div>
</td>
</tr>
</table>
</div>

<div class="brief-section">
<h3>The Problem</h3>
<p>Users struggle with testing email systems</p>
</div>

<div class="brief-section">
<h3>Target Audience</h3>
<p>Developers building email features</p>
</div>

<div class="brief-section">
<h3>Proposed Solution</h3>
<p>Automated email testing framework</p>
</div>

<div class="brief-section">
<h3>Key Features</h3>
<ul class="features-list">
<li>Feature 1</li>
<li>Feature 2</li>
<li>Feature 3</li>
<li>Feature 4</li>
</ul>
</div>

<div class="brief-section">
<h3>Go-to-Market</h3>
<p><strong>Strategy:</strong> Launch on Product Hunt</p>
<p><strong>First Customers:</strong> Indie hackers and startups</p>
</div>


<div class="other-ideas">
<h3>More Ideas Today</h3>

<div class="idea-row " style="position: relative;">

<div class="idea-rank">2</div>
<div class="idea-content">
<div class="idea-name">Idea 2</div>
<div class="idea-tagline">Tagline for idea 2</div>
</div>
<div class="idea-score">9.5</div>
</div>


<div class="idea-row " style="position: relative;">

<div class="idea-rank">3</div>
<div class="idea-content">
<div class="idea-name">Idea 3</div>
<div class="idea-tagline">Tagline for idea 3</div>
</div>
<div class="idea-score">9.0</div>
</div>


<div class="idea-row " style="position: relative;">

<div class="idea-rank">4</div>
<div class="idea-content">
<div class="idea-name">Idea 4</div>
<div class="idea-tagline">Tagline for idea 4</div>
</div>
<div class="idea-score">8.5</div>
</div>


<div class="idea-row " style="position: relative;">

<div class="idea-rank">5</div>
<div class="idea-content">
<div class="idea-name">Idea 5</div>
<div class="idea-tagline">Tagline for idea 5</div>
</div>
<div class="idea-score">8.0</div>
</div>


</div>



<div class="footer">
<p>You're receiving this because you subscribed to ZeroToShip daily briefs.</p>
<p>
<a href="https://test.zerotoship.dev/unsub">Unsubscribe</a> |
<a href="https://test.zerotoship.dev">View in browser</a>
</p>
<p>&copy; YEAR ZeroToShip. All rights reserved.</p>
</div>

</div>
</body>
</html>"
`;

exports[`Email Builder > HTML template snapshots > matches snapshot for plain text (free tier) 1`] = `
"ZEROTOSHIP DAILY BRIEF
==================================================

#1 TODAY'S TOP IDEA
Idea 1
"Tagline for idea 1"

Priority Score: 10.0 | Effort: weekend

THE PROBLEM
------------------------------
Users struggle with testing email systems

TARGET AUDIENCE
------------------------------
Developers building email features

PROPOSED SOLUTION
------------------------------
Automated email testing framework

KEY FEATURES
------------------------------
- Feature 1
- Feature 2
- Feature 3
- Feature 4


MORE IDEAS TODAY
==================================================
#2 Idea 2 - Score: 9.5
   Tagline for idea 2
#3 Idea 3 - Score: 9.0
   Tagline for idea 3
#4 Idea 4 [LOCKED] - Score: 8.5
#5 Idea 5 [LOCKED] - Score: 8.0

--------------------------------------------------
Upgrade to Pro for every full brief, plus archive & search:
https://test.zerotoship.dev/upgrade

--------------------------------------------------
Unsubscribe: https://test.zerotoship.dev/unsub"
`;

exports[`Email Builder > HTML template snapshots > matches snapshot for plain text (pro tier) 1`] = `
"ZEROTOSHIP DAILY BRIEF
==================================================

#1 TODAY'S TOP IDEA
Idea 1
"Tagline for idea 1"

Priority Score: 10.0 | Effort: weekend

THE PROBLEM
------------------------------
Users struggle with testing email systems

TARGET AUDIENCE
------------------------------
Developers building email features

PROPOSED SOLUTION
------------------------------
Automated email testing framework

KEY FEATURES
------------------------------
- Feature 1
- Feature 2
- Feature 3
- Feature 4


MORE IDEAS TODAY
==================================================
#2 Idea 2 - Score: 9.5
   Tagline for idea 2
#3 Idea 3 - Score: 9.0
   Tagline for idea 3
#4 Idea 4 - Score: 8.5
   Tagline for idea 4
#5 Idea 5 - Score: 8.0
   Tagline for idea 5

--------------------------------------------------
Unsubscribe: https://test.zerotoship.dev/unsub"
`;

exports[`Email Builder > HTML template snapshots > matches snapshot for single brief (free tier) 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="UTF-8">
<meta name="viewport" content="width=device-width, initial-scale=1.0">
<title>Today&#39;s Top Startup Idea: SnapshotApp</title>
<style>

body {
font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
line-height: 1.6;
color: #1a1a1a;
background-color: #f5f5f5;
margin: 0;
padding: 0;
}
.container {
max-width: 600px;
margin: 0 auto;
background-color: #ffffff;
}
.header {
background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
color: white;
padding: 32px 24px;
text-align: center;
}
.header h1 {
margin: 0;
font-size: 24px;
font-weight: 600;
}
.header .date {
margin-top: 8px;
opacity: 0.9;
font-size: 14px;
}
.hero {
padding: 32px 24px;
background-color: #fafafa;
border-bottom: 1px solid #eee;
}
.hero-badge {
display: inline-block;
background: linear-gradient(135deg, #ff6b6b 0%, #ee5a5a 100%);
color: white;
padding: 4px 12px;
border-radius: 16px;
font-size: 12px;
font-weight: 600;
margin-bottom: 16px;
}
.hero h2 {
margin: 0 0 8px 0;
font-size: 28px;
color: #1a1a1a;
}
.hero .tagline {
color: #666;
font-size: 16px;
margin-bottom: 16px;
}
.score-bar {
display: flex;
gap: 16px;
margin: 16px 0;
}
.score-item {
background: #fff;
padding: 12px 16px;
border-radius: 8px;
border: 1px solid #e0e0e0;
}
.score-label {
font-size: 11px;
color: #888;
text-transform: uppercase;
letter-spacing: 0.5px;
}
.score-value {
font-size: 20px;
font-weight: 700;
color: #667eea;
}
.brief-section {
padding: 24px;
border-bottom: 1px solid #eee;
}
.brief-section h3 {
margin: 0 0 12px 0;
font-size: 14px;
color: #888;
text-transform: uppercase;
letter-spacing: 0.5px;
}
.brief-section p {
margin: 0;
color: #333;
}
.features-list {
list-style: none;
padding: 0;
margin: 0;
}
.features-list li {
padding: 8px 0;
padding-left: 24px;
position: relative;
}
.features-list li:before {
content: '\\2713';
position: absolute;
left: 0;
color: #22c55e;
font-weight: bold;
}
.other-ideas {
padding: 24px;
}
.other-ideas h3 {
margin: 0 0 16px 0;
font-size: 18px;
}
.idea-row {
display: flex;
align-items: center;
padding: 16px;
background: #fafafa;
border-radius: 8px;
margin-bottom: 12px;
}
.idea-rank {
width: 32px;
height: 32px;
background: #667eea;
color: white;
border-radius: 50%;
display: flex;
align-items: center;
justify-content: center;
font-weight: 600;
margin-right: 16px;
flex-shrink: 0;
}
.idea-content {
flex: 1;
}
.idea-name {
font-weight: 600;
color: #1a1a1a;
margin-bottom: 4px;
}
.idea-tagline {
font-size: 14px;
color: #666;
}
.idea-score {
font-weight: 600;
color: #667eea;
font-size: 18px;
}
.locked-idea {
opacity: 0.5;
filter: blur(2px);
}
.cta-section {
padding: 32px 24px;
text-align: center;
background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
}
.cta-section h3 {
color: white;
margin: 0 0 8px 0;
font-size: 20px;
}
.cta-section p {
color: rgba(255,255,255,0.9);
margin: 0 0 16px 0;
}
.cta-button {
display: inline-block;
background: white;
color: #667eea;
padding: 14px 32px;
border-radius: 8px;
text-decoration: none;
font-weight: 600;
font-size: 16px;
}
.footer {
padding: 24px;
text-align: center;
background: #1a1a1a;
color: #888;
font-size: 12px;
}
.footer a {
color: #888;
text-decoration: underline;
}

</style>
</head>
<body>
<div class="container">
<div class="header">
<h1>ZeroToShip</h1>
<p class="date">DATE_PLACEHOLDER</p>
</div>


<div class="hero">
<span class="hero-badge">#1 TODAY'S TOP IDEA</span>
<h2>SnapshotApp</h2>
<p class="tagline">A test idea for testing purposes</p>

<table width="100%" cellpadding="0" cellspacing="0" style="margin: 16px 0;">
<tr>
<td width="33%" style="background: #fff; padding: 12px 16px; border-radius: 8px; border: 1px solid #e0e0e0; text-align: center;">
<div style="font-size: 11px; color: #888; text-transform: uppercase; letter-spacing: 0.5px;">Priority</div>
<div style="font-size: 20px; font-weight: 700; color: #667eea;">8.5</div>
</td>
<td width="4%"></td>
<td width="33%" style="background: #fff; padding: 12px 16px; border-radius: 8px; border: 1px solid #e0e0e0; text-align: center;">
<div style="font-size: 11px; color: #888; text-transform: uppercase; letter-spacing: 0.5px;">Effort</div>
<div style="font-size: 20px; font-weight: 700; color: #667eea;">weekend</div>
</td>
<td width="4%"></td>
<td width="33%" style="background: #fff; padding: 12px 16px; border-radius: 8px; border: 1px solid #e0e0e0; text-align: center;">
<div style="font-size: 11px; color: #888; text-transform: uppercase; letter-spacing: 0.5px;">Revenue</div>
<div style="font-size: 14px; font-weight: 700; color: #667eea;">$10K MRR</div>
</td>
</tr>
</table>
</div>

<div class="brief-section">
<h3>The Problem</h3>
<p>Users struggle with testing email systems</p>
</div>

<div class="brief-section">
<h3>Target Audience</h3>
<p>Developers building email features</p>
</div>

<div class="brief-section">
<h3>Proposed Solution</h3>
<p>Automated email testing framework</p>
</div>

<div class="brief-section">
<h3>Key Features</h3>
<ul class="features-list">
<li>Feature 1</li>
<li>Feature 2</li>
<li>Feature 3</li>
<li>Feature 4</li>
</ul>
</div>

<div class="brief-section">
<h3>Go-to-Market</h3>
<p><strong>Strategy:</strong> Launch on Product Hunt</p>
<p><strong>First Customers:</strong> Indie hackers and startups</p>
</div>



<div class="cta-section">
<h3>Every Brief. Every Day.</h3>
<p>You're seeing 1 featured brief per email. Pro members get the full brief for every idea, plus archive access and search.</p>
<a href="https://test.zerotoship.dev/upgrade" class="cta-button">Upgrade to Pro</a>
</div>


<div class="footer">
<p>You're receiving this because you subscribed to ZeroToShip daily briefs.</p>
<p>
<a href="https://test.zerotoship.dev/unsub">Unsubscribe</a> |
<a href="https://test.zerotoship.dev">View in browser</a>
</p>
<p>&copy; YEAR ZeroToShip. All rights reserved.</p>
</div>

</div>
</body>
</html>"
`;
